<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.about.AboutFragment">

    <TextView
        android:id="@+id/kelompok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelompok_8"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />

    <TextView
        android:id="@+id/anggota_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota1"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kelompok"
        app:layout_constraintVertical_bias="0.02"
        />

    <TextView
        android:id="@+id/anggota_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota2"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anggota_1"
        app:layout_constraintVertical_bias="0.02"
        />

    <TextView
        android:id="@+id/anggota_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota3"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anggota_2"
        app:layout_constraintVertical_bias="0.02"

        />
    <TextView
        android:id="@+id/anggota_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota4"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anggota_3"
        app:layout_constraintVertical_bias="0.02"

        />

    <TextView
        android:id="@+id/anggota_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota5"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anggota_4"
        app:layout_constraintVertical_bias="0.02"
        />

</androidx.constraintlayout.widget.ConstraintLayout>